--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,7 +1,20 @@
-# The root logger with appender name
-rootLogger = INFO, STDOUT
-# Assign STDOUT a valid appender & define its layout
-appender.console.name = STDOUT
+# Ghi log ra console
 appender.console.type = Console
+appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d [%t] %5p %c - %m%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
+# Ghi log ra file
+appender.file.type = File
+appender.file.name = LOGFILE
+appender.file.fileName = test/logs/log4j2.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = %-5level %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.file.filter.threshold.type = ThresholdFilter
+appender.file.filter.threshold.level = info
+
+# Root logger
+rootLogger.level = info
+rootLogger.appenderRefs = stdout, logfile
+rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.logfile.ref = LOGFILE
